trying to add comment

--- a/demo.html
+++ b/demo.html
@@ -1,21 +1,71 @@
 <html>
   <head>
-    <h1> How to Rule The World </h1>
+    <link rel= "stylesheet" href = "democss.css"/>
+    <title> SWAM | Bio </title>
   </head>
 
   <body>
-    <h3> Be brave </h3>
-      <p> It's hard and the road ahead of you is tough. But you are tougher.
-        You deserve the world don't let anyone tell you otherwise. If you're
-        willing to put in the work you will own
-        it! <div style="float: right;"><img src= "lion.jpg"/></div></p>
 
-    <h3> Be Kind </h3>
-      <p> no one wants an evil dictator. Taking over the world will be a lot
-        easier if you aren't actively trying to make enemies. People will love
-        you, basically let you take over, if they think you'll treat them right.
-        Help them and they will give you your throne </p>
+    <div class="no"/>
+      <a href="homepage.html">Cover Page </a>
+    </div>
 
-  </body>
+    <h1> ~SWAM~ </h1>
+      <h3> So What About Me </h3>
+
+        <div class= "yes">
+          <p> So my name is Asha, although I sometimes go by my middle name Zara. I'm definitely that introvert that loves netflix and chill or just
+          playing on my phone . I've grown up around technology and my love for coding started very early on but only began to blossom during my high school years.
+          Being able to code my own game or create new websites, and create softwares that people around the world can use to make their lives easier really excites me!</p>
+
+          <p> Other than Google, there is little else that I am obsessed with. Marvel is one of those things. When I'm not coding or on my phone I'm either reading or
+          watching something Marvel related! I've always had a love for comics, but until recently I was more of a DC fan. However with the boom in Marvel movies and
+          the intricate MCU I found myself strongly enticed with the characters and their backstories. Ever since I've become completely crazy about Marvel characters, Iron-Man
+          and Spider-Gwen in particular. And while I can be a bit obsessed, I really do love the MCU and their comics. </p>
+
+           <h2> About me =^.^= </h2>
+           <p> I am great. Do you really need to know more? </p>
+
+           <p>Tum is my life</p>
+
+           <p>Twitter is my life</p>
+
+           <p> Avengers is my life</p>
+
+           <p>Thats honestly it</p>
+
+           <div class= "link"> <a href= "https://www.tumblr.com/"> Check out my Tumblr yall</a>
+           <input type="button" id="comment_button" value="Comment"/></div>
+        </div>
+
+          <h5> Music that is good</h5>
+
+
+        <div class="lo">
+          <iframe width="200" height="200" src= "https://www.youtube.com/embed/by3yRdlQvzs"> </iframe>
+
+           -
+
+          <iframe width="200" height="200" src= "https://www.youtube.com/embed/PT2_F-1esPk"> </iframe>
+
+          -
+
+          <iframe width="200" height="200" src= "https://www.youtube.com/embed/pXRviuL6vMY"> </iframe>
+
+          -
+
+          <iframe width="200" height="200" src= "https://www.youtube.com/embed/6c9vKWqiy8k"> </iframe>
+
+          -
+
+          <iframe width="200" height="200" src= "https://www.youtube.com/embed/fyaI4-5849w"> </iframe>
+
+          -
+          <iframe width="200" height="200" src= "https://www.youtube.com/embed/NahQKl3z3mg"> </iframe>
+        </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="demo.js"></script>
+      </body>
 
 </html>
